--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 		"@types/react": "^17.0.43",
 		"@types/react-dom": "^17.0.14",
 		"@types/styled-components": "^5.1.24",
+		"moment": "^2.29.1",
 		"react": "^17.0.2",
 		"react-date-picker": "^8.4.0",
 		"react-dom": "^17.0.2",
 		"react-scripts": "5.0.0",
 		"styled-components": "^5.3.5",
-		"typescript": "^4.6.3"
+		"typescript": "^4.6.3",
+		"uuid": "^8.3.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -41,5 +43,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@types/uuid": "^8.3.4"
 	}
 }
